# dockvault

./: Cargo.toml  README.md
completions/: dockvault.fish
examples/: btree.rs  clapcomplete.rs  example_serde.rs  fake_git.py  fake_git.rs  git-derive.rs  make_default.rs  serde_flatten.rs  serde_missing.rs  serde_option_skip.rs  serde_rename.rs  serde_set.rs
src/: main.rs  parser.rs  state.rs  vault.rs
