[package]
name = "dockvault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
dirs = "5.0.1"
clap = { version = "4.5.4", features = ["derive"] }
base64 = "0.22.1"
